# jetank_detection

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: DetectSocks.action  SegmentSocks.action
config/: sock_detector.yaml
jetank_detection/: backends.py  capture_frames.py  sock_detector_node.py
launch/: detect.launch.py  detect_real.launch.py  detect_sim.launch.py
msg/: SockCloud.msg
scripts/: prepare_dataset.py
test/: test_import.py  test_logic.py
